tests/ui/const-generics/mgca/adt_expr_arg_simple.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/adt_expr_arg_simple.rs:28:54
   |
LL |     foo::<{ core::direct_const_arg!(Some::<u32> { 0: N + 1 }) }>();
   |                                                      ^^^^^

error: generic parameters may not be used in const operations
  --> $DIR/adt_expr_arg_simple.rs:33:38
   |
LL |     foo::<{ Some::<u32> { 0: const { N + 1 } } }>();
   |                                      ^
   |
   = help: add `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 2 previous errors

